Refactor Docker setup and add Vite configuration for frontend development

--- a/UTH-ConfMS-Frontend/Dockerfile
+++ b/UTH-ConfMS-Frontend/Dockerfile
@@ -1,25 +1,20 @@
-# Build React App
-FROM node:18-alpine as build
+# Sử dụng Node image nhẹ
+FROM node:18-alpine
+
+# Thiết lập thư mục làm việc
 WORKDIR /app
+
+# Copy file định nghĩa thư viện
 COPY package*.json ./
+
+# Cài đặt thư viện
 RUN npm install
+
+# Copy toàn bộ code vào
 COPY . .
-RUN npm run build
 
-# Chạy bằng Nginx
-FROM nginx:alpine
-# Copy file build vào thư mục của Nginx
-COPY --from=build /app/dist /usr/share/nginx/html
-# (Lưu ý: Nếu dùng Create-React-App cũ thì đổi /dist thành /build)
+# Mở cổng 3000 (Cổng mặc định chúng ta sẽ cấu hình cho Vite)
+EXPOSE 3000
 
-RUN echo 'server { \
-    listen 80; \
-    location / { \
-        root /usr/share/nginx/html; \
-        index index.html index.htm; \
-        try_files $uri $uri/ /index.html; \
-    } \
-}' > /etc/nginx/conf.d/default.conf
-
-EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+# Lệnh chạy server dev (thêm --host để Docker map được ra ngoài)
+CMD ["npm", "run", "dev", "--", "--host"]
