--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -91,32 +91,32 @@ services:
       - uth-confms-network
     restart: unless-stopped
 
-  # submission-service:
-  #   build:
-  #     context: .
-  #     dockerfile: UTH-ConfMS-Backend/Services/Submission.Service/Dockerfile
-  #   container_name: uth-confms-submission
-  #   environment:
-  #     - ASPNETCORE_ENVIRONMENT=Development
-  #     - ASPNETCORE_URLS=http://+:5003
-  #     - ConnectionStrings__DefaultConnection=Host=postgres;Port=5432;Database=uth_confms;Username=confms_admin;Password=123456
-  #     - ConnectionStrings__Redis=redis:6379
-#     - Storage__Provider=Local
-  #     - Storage__BasePath=/app/uploads
-  #     - Services__IdentityServiceUrl=http://identity-service:5001
-  #     - Services__ConferenceServiceUrl=http://conference-service:5002
-  #   ports:
-  #     - "5003:5003"
-  #   volumes:
-  #     - submission_files:/app/uploads
-  #   depends_on:
-  #     - postgres
-  #     - redis
-  #     - identity-service
-  #     - conference-service
-  #   networks:
-  #     - uth-confms-network
-  #   restart: unless-stopped
+  submission-service:
+    build:
+      context: .
+      dockerfile: UTH-ConfMS-Backend/Services/Submission.Service/Dockerfile
+    container_name: uth-confms-submission
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=http://+:5003
+      - ConnectionStrings__DefaultConnection=Host=postgres;Port=5432;Database=uth_confms;Username=confms_admin;Password=123456
+      - ConnectionStrings__Redis=redis:6379
+      - Storage__Provider=Local
+      - Storage__BasePath=/app/uploads
+      - Services__IdentityServiceUrl=http://identity-service:5001
+      - Services__ConferenceServiceUrl=http://conference-service:5002
+    ports:
+      - "5003:5003"
+    volumes:
+      - submission_files:/app/uploads
+    depends_on:
+      - postgres
+      - redis
+      - identity-service
+      - conference-service
+    networks:
+      - uth-confms-network
+    restart: unless-stopped
 
   # review-service:
   #   build:
@@ -142,29 +142,29 @@ services:
   #     - uth-confms-network
   #   restart: unless-stopped
 
-  # notification-service:
-  #   build:
-  #     context: .
-  #     dockerfile: UTH-ConfMS-Backend/Services/Notification.Service/Dockerfile
-  #   container_name: uth-confms-notification
-  #   environment:
-  #     - ASPNETCORE_ENVIRONMENT=Development
-  #     - ASPNETCORE_URLS=http://+:5005
-  #     - ConnectionStrings__DefaultConnection=Host=postgres;Port=5432;Database=uth_confms;Username=confms_admin;Password=123456
-  #     - ConnectionStrings__Redis=redis:6379
-  #     - Email__Provider=SMTP
-  #     - Email__SmtpHost=smtp.gmail.com
-  #     - Email__SmtpPort=587
-  #     - Email__FromEmail=noreply@uth-confms.edu.vn
-  #     - Email__FromName=UTH Conference System
-  #   ports:
-  #     - "5005:5005"
-  #   depends_on:
-  #     - postgres
-  #     - redis
-  #   networks:
-  #     - uth-confms-network
-  #   restart: unless-stopped
+  notification-service:
+    build:
+      context: .
+      dockerfile: UTH-ConfMS-Backend/Services/Notification.Service/Dockerfile
+    container_name: uth-confms-notification
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=http://+:5005
+      - ConnectionStrings__DefaultConnection=Host=postgres;Port=5432;Database=uth_confms;Username=confms_admin;Password=123456
+      - ConnectionStrings__Redis=redis:6379
+      - Email__Provider=SMTP
+      - Email__SmtpHost=smtp.gmail.com
+      - Email__SmtpPort=587
+      - Email__FromEmail=noreply@uth-confms.edu.vn
+      - Email__FromName=UTH Conference System
+    ports:
+      - "5005:5005"
+    depends_on:
+      - postgres
+      - redis
+    networks:
+      - uth-confms-network
+    restart: unless-stopped
 
   # ====================
   # API Gateway
@@ -189,9 +189,9 @@ services:
     depends_on:
       - identity-service
       - conference-service
-      # - submission-service
+      - submission-service
       # - review-service
-      # - notification-service
+      - notification-service
     networks:
       - uth-confms-network
     restart: unless-stopped
