feat: tích hợp gửi email mời tham gia hội đồng và sửa lỗi cấu hình SMTP

--- a/UTH-ConfMS-Backend/Services/Conference.Service/appsettings.json
+++ b/UTH-ConfMS-Backend/Services/Conference.Service/appsettings.json
@@ -9,7 +9,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=uthconfms_conference;Username=postgres;Password=123456",
-    "Redis": "localhost:6379"
+    "Redis": "localhost:6379",
+    "RabbitMQ": "rabbitmq"
   },
   "JWT": {
     "Secret": "UTH_CONFMS_JWT_SECRET_KEY_2026_CHANGE_IN_PRODUCTION",
