--- a/UTH-ConfMS-Backend/Services/Conference.Service/Conference.Service.csproj
+++ b/UTH-ConfMS-Backend/Services/Conference.Service/Conference.Service.csproj
@@ -25,6 +25,7 @@
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
+    <PackageReference Include="MassTransit.RabbitMQ" Version="8.1.3" />
   </ItemGroup>
 
   <ItemGroup>
