--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -112,10 +112,10 @@ services:
       - HASH_INPUT_IN_LOGS=true
       - PRESERVE_DOUBLE_BLIND=true
       # Groq AI Configuration
-      - GROQ_API_KEY=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
-      - GROQ_MODEL=llama-3.3-70b-versatile
-      - GROQ_MAX_TOKENS=2000
-      - GROQ_TEMPERATURE=0.7
+      - GROQ_API_KEY=${GROQ_API_KEY}
+      - GROQ_MODEL=${GROQ_MODEL:-llama-3.3-70b-versatile}
+      - GROQ_MAX_TOKENS=${GROQ_MAX_TOKENS:-2000}
+      - GROQ_TEMPERATURE=${GROQ_TEMPERATURE:-0.7}
     ports:
       - "8000:8000"
     volumes:
